# ndexr-v2.0

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  clean.R  docker-compose.yaml  package-lock.json  redpul-main.pem
frontend/: .Rbuildignore  .gitignore  DESCRIPTION  Dockerfile  LICENSE  LICENSE.md  Makefile  NAMESPACE  app.R  cognitor.R  package-lock.json  package.json
frontend/R/: about.R  aelias_corner.R  all_domains.R  backend.R  browse.R  build_ndexr_plot.R  charge_customer.R  chart.R  cognito_add_account.R  cognito_server.R  cognito_ui.R  cookie_server.R  cookie_ui.R  data_monitor.R  data_review.R  data_search.R  domain.R  export_postgres_to_s3.R  footer.R  geo.R  get_config.R  get_info_user.R  get_token_access.R  (+34 more)
mongo/: distinct_user_time.txt
nginx/: nginx.conf
redpul/: .Rbuildignore  DESCRIPTION  Dockerfile  Makefile  NAMESPACE  README.Rmd  README.md  main.R  plumber.R  pulse.R
redpul/src/rust/: Cargo.toml  README.md
redpul/src/rust/history/: shared_channel.rs
redpul/src/rust/src/: lib.rs  redpul.rs
scripts/: access.R  admin_controls.R  backpg.R  cognitoR.R  country.R  datasearch.R  email.R  httr_ex.R  last_100.R  mongo.R  mq.R  plot_count.R  prism_script.R  reactive.R  striper.R  submission_filter.R  summary.Rmd  summary.nb.html  ukraine.R  websocket.R
sql/: counts.sql  geo.sql  query.sql  statistics.sql  submissions.sql  submissions_backup.sql  submissions_summary.sql  update_submissions_history.sql  urls.sql  userbase.sql
standalone/: .env.docker  docker-compose.yaml
state/: .Rbuildignore  DESCRIPTION  Makefile  NAMESPACE
(+366 files in other folders)
