[package]
name = 'redpul'
version = '0.1.0'
edition = '2018'

[lib]
crate-type = [ 'staticlib' ]

[dependencies]
extendr-engine = { git = 'https://github.com/extendr/extendr/' }
extendr-api = { git = 'https://github.com/extendr/extendr/' }
roux = "1.3.7"
tokio = { version = "1.15.0", features = ["full"] }
serde_json = "1.0.75"
roux-stream = "0.1.0"
futures = "0.3.19"
reqwest = "0.11.9"
log = "0.4.*"
env_logger = "0.7.*"